Fix an issue with long Dashboard note margin on mobile

--- a/packages/@uppy/dashboard/src/style.scss
+++ b/packages/@uppy/dashboard/src/style.scss
@@ -571,16 +571,16 @@
 
 .uppy-Dashboard-note {
   font-size: 13px;
-  line-height: 1.2;
+  line-height: 1.25;
   text-align: center;
   color: rgba($color-asphalt-gray, 0.8);
-  // position: absolute;
-  // bottom: 45px;
-  // left: 0;
-  width: 100%;
+  max-width: 80%;
+  margin: auto;
 
   .uppy-size--md & {
     font-size: 16px;
+    line-height: 1.3;
+    max-width: 90%;
   }
 }
 
@@ -605,6 +605,7 @@
   position: relative;
   top: 1px;
   opacity: 0.9;
+  vertical-align: text-top;
 }
 
 .uppy-DashboardItem {
